# dnn_rust_blog

./: Cargo.toml  model.json
datasets/: test_set.csv
src/: lib.rs
